--- a/Rfoof/en.lproj/Localizable.strings
+++ b/Rfoof/en.lproj/Localizable.strings
@@ -40,7 +40,7 @@
 "Titl" = "Titl";
 "Description" = "Description";
 "Price" = "Price";
-"Add" = "Add";
+"Add Product" = "Add Product";
 
 
 //details
