--- a/Rfoof/ar.lproj/Localizable.strings
+++ b/Rfoof/ar.lproj/Localizable.strings
@@ -5,13 +5,15 @@
   Created by Abdulrahman Gazwani on 02/01/2022.
   
 */
+
 // landing
+
 "Rfoof" = "رفوف";
 "WELCOME" = "مرحبا";
 "Register" = "تسجيل";
 "login" = "تسجيل الدخول";
 
-
+//-----------------------------------------
 
 // Register
 "Name" = "الاسم";
@@ -22,13 +24,15 @@
 "Register" = "مستخدم جديد";
 "Login" = "تسجيل الدخول";
 
-
+//-----------------------------------------
 
 // Login
 "Email" = "الايميل";
 "Password" = "كلمة المرور";
 "login" = "دخول";
 "Register" = "مستخدم جديد";
+
+//-----------------------------------------
 
 // product
 "Titl" = "العنوان";
@@ -38,8 +42,30 @@
 
 
 
+
+//-----------------------------------------
+
+
 //details
 "Title" = "العنوان";
 "Description" = "الوصف";
 "price" = "السعر";
 "Number" = "الرقم";
+
+//-----------------------------------------
+
+// profile
+
+"Name" = "الاسم";
+
+"Number" = "الرقم";
+
+"Edit" = "تعديل";
+
+//-----------------------------------------
+
+"Name" = "الاسم";
+
+"Number" = "الرقم";
+
+"save" = "حفظ";
