--- a/Rfoof/en.lproj/Localizable.strings
+++ b/Rfoof/en.lproj/Localizable.strings
@@ -42,6 +42,7 @@
 "Price" = "Price";
 "Add Product" = "Add Product";
 
+"Update Product" = "Update Product";
 //-----------------------------------------------
 
 
