--- a/Rfoof/ar.lproj/Localizable.strings
+++ b/Rfoof/ar.lproj/Localizable.strings
@@ -23,6 +23,9 @@
 "Number" = "الرقم";
 "Register" = "مستخدم جديد";
 "Login" = "تسجيل الدخول";
+"Photo Album" = "البوم الصور";
+"camera" = "الكاميرا";
+"cancle" = "انهاء";
 
 //-----------------------------------------
 
@@ -70,3 +73,9 @@
 "Number" = "الرقم";
 
 "save" = "حفظ";
+
+"chose Picture" = "اختيار الصورة ";
+" Camera " = " الكاميرا ";
+" Photo Album " = " البوم الصور ";
+" Cancle " = " انهاء ";
+
