--- a/Rfoof/ar.lproj/Localizable.strings
+++ b/Rfoof/ar.lproj/Localizable.strings
@@ -26,6 +26,7 @@
 "Photo Album" = "البوم الصور";
 "camera" = "الكاميرا";
 "cancle" = "انهاء";
+"backButton" = "رجوع";
 
 //-----------------------------------------
 
@@ -37,8 +38,14 @@
 
 //-----------------------------------------
 
+"Exit" = "خروج";
+"are you sure" = "هل انت متأكد";
+"Yes" = "نعم";
+"Cancel" = "انهاء";
+
+
 // product
-"Titl" = "العنوان";
+"Titl" = "اسم المنتج";
 "Description" = "الوصف";
 "Price" = "السعر";
 "Add Product" = "اضافة منتج";
@@ -51,7 +58,7 @@
 
 
 //details
-"Title" = "العنوان";
+"Title" = "اسم المنتج";
 "Description" = "الوصف";
 "price" = "السعر";
 "Number" = "الرقم";
